--- a/INSTALL
+++ b/INSTALL
@@ -52,7 +52,10 @@ cpit addpath               # put file a end of PATH
 cpit al                    # some semi-useful aliases
 cpit addpath0              # put file at start of PATH
 cpit builddir              # hold build director basename
+'date' >> $HOME/$rchjlp/execdir # time stamp the gen
 cpit c                     # director quick change by acronym
+cpit checksys              # aid to show rchjlp, bld-lib exec-lib
+cpit checkvar              # aid to show rchjlp
 cpit chkvar                # check the rchjlp variable        
 cpit COPYING               # MIT license
 cpit delpath               # remove file from PATH 
