--- a/INSTALL
+++ b/INSTALL
@@ -52,17 +52,18 @@ cpit addpath               # put file a end of PATH
 cpit al                    # some semi-useful aliases
 cpit addpath0              # put file at start of PATH
 cpit builddir              # hold build director basename
-'date' >> $HOME/$rchjlp/execdir # time stamp the gen
 cpit c                     # director quick change by acronym
 cpit checksys              # aid to show rchjlp, bld-lib exec-lib
 cpit checkvar              # aid to show rchjlp
 cpit chkvar                # check the rchjlp variable        
 cpit COPYING               # MIT license
 cpit delpath               # remove file from PATH 
+cpit diffme                # short cut script to diff mems in pdw
 cpit dirinpath             # chk all dir file where in path
 cpit ech0                  # debugging echo function
 cpit ech1                  # debugging echo inline
 cpit execdir               # hold execution dir basename
+'date' >> $HOME/$rchjlp/execdir # time stamp the gen
 cpit engage                # hook in code to activate environment
 cpit f                     # go to file by acronym
 cpit f_acrolist            # start list of acronyms
@@ -71,7 +72,10 @@ cpit ged                   # like g but with nano rather than vim
 # not this one -- cpit INSTALL               # this script
 cpit lbang                 # for the lazy -  #!/usr/bin/env bash
 cpit meminpath             # show which path files have mem (compare
-cpit refresh               # copy a new version from build to exec  
+cpit README.md             # notes like a 'typical' README
+cpit re_build              # copy from pwd/exec-lib to build-lib    
+cpit re_exec               # copy from pwd/build-lib to exec-lib    
+cpit refresh               # not used replace by re_exec or re_build
 # not this one -- cpit setvar                # set the rchjlp                         
 cpit src                   # Eric Raymond  Simple Revision Control  
 cpit srcdoc                # starter notes on src                  
