--- a/INSTALL
+++ b/INSTALL
@@ -29,12 +29,12 @@ if [ -d $exec_lib ]; then
   read newname rest
   if [ ".$newname" == "." ]; then
     echo "Nothing done, I quit."
-    exit 4
+    return
   else
     echo "mv $exec_lib $HOME/$newname"  
     mv $exec_lib $HOME/$newname
     echo "OK, we are ready -- rerun the INSTALL script"
-    exit 2
+    return
   fi
 else
   echo "On we go, allocate, populate and rePATH  $exec_lib."
