--- a/INSTALL
+++ b/INSTALL
@@ -150,6 +150,7 @@ cpit ech1                  # debugging echo inline
 cpit execdir               # hold execution dir basename
 'date' >> $HOME/$rchjlp/execdir # time stamp the gen
 cpit engage                # hook in code to activate environment
+cpit engageq               # hook in after INSTALL               
 cpit f                     # go to file by acronym
 cpit f_acrolist            # start list of acronyms
 cpit g                     # go to file by number
