Add the ff functionality  	modified:   11asummary  doc on ff and f1  	modified:   INSTALL  setup for an install  	new file:   f1    used by ff  (the f work)  	new file:   ff    extend f to projects

--- a/INSTALL
+++ b/INSTALL
@@ -152,6 +152,8 @@ cpit execdir               # hold execution dir basename
 cpit engage                # hook in code to activate environment
 cpit engageq               # hook in after INSTALL               
 cpit f                     # go to file by acronym
+cpit ff                    # f for project groups  
+cpit f1                    # ff subfunction        
 cpit f_acrolist            # start list of acronyms
 cpit g                     # go to file by number
 cpit ged                   # like g but with nano rather than vim
