--- a/INSTALL
+++ b/INSTALL
@@ -138,6 +138,7 @@ cpit al                    # some semi-useful aliases
 cpit addpath0              # put file at start of PATH
 cpit builddir              # hold build director basename
 cpit c                     # director quick change by acronym
+cpit chkwisys              # aid to show rchjlp, bld-lib exec-lib
 cpit checksys              # aid to show rchjlp, bld-lib exec-lib
 cpit checkvar              # aid to show rchjlp
 cpit chkvar                # check the rchjlp variable        
