--- a/INSTALL
+++ b/INSTALL
@@ -10,7 +10,10 @@ function ech0 () {     # turn on debugging with  export ech0=ON
 function cpit () {
   passed_val=$@
   ech0 "\$passed_val === $passed_val"
+  IFSsave=$IFS
+  IFS=" "
   read first_word rest <<< $passed_val
+  IFS=$IFSsave
 # echo "$first_word   ${first_word:0:1}"
   if [ ".${first_word:0:1}" == ".#" ]; then
     echo "comment:$passed_val" >> $rchbls/BooHoo
@@ -179,8 +182,9 @@ fi
 echo
 ls -A $exec_lib
 echo
-echo "To activate enter  '. ~/$rchbls/engage' "
+echo "To activate enter  '. $rchbls/engage' "
 echo "You can back off with '. delpath $exec_lib' "
-echo "Restart with existing rchtest file with  . ~/$rchbls/engage"
+echo "Restart with existing rchtest file with  . $rchbls/engage"
 echo 
 echo "Good Luck"
+
