--- a/changes
+++ b/changes
@@ -11,4 +11,6 @@ fix final messges in INSTALL   cd ~/fubar    . ./engage
 
 fix INSTALLmbrs  ffdoit, getsys2, xyz
 
-done: fix qv typeos
+dMon 04 Jan 2021 08:46:00 PM CST
+1. update al
+2. rewrite setvar to put execdir/builddir initialized
